--- a/gb/23/7/12/n14032679.md
+++ b/gb/23/7/12/n14032679.md
@@ -3,55 +3,48 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2023卡尔加里牛仔节：浮光掠影</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032680-1_IMG_20230709_145112969_HDR-600x400.jpg" />
-<h6>牛仔公园内各色表演娱乐着过往的游客，尤受孩童青睐。（林采枫/大纪元）
-</h6>
+<h6>牛仔公园内各色表演娱乐着过往的游客，尤受孩童青睐。（林采枫/大纪元）</h6>
 <hr>
 <p>【大纪元2023年07月12日讯】在长达十日的卡尔加里牛仔节期间，自金乌当空至玉兔东升，每天进入牛仔公园的游客多至十余万。形形色色，众生各异，熙熙攘攘之间，织就万丈红尘。在世事艰难之际，有此一乐，不亦悦哉！</p>
-<figure id="attachment_14032681" aria-describedby="caption-attachment-14032681" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032681-2_IMG_20230709_110020293_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032681" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032681-2_IMG_20230709_110020293_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032681" class="wp-caption-text">牛仔公园地标下，人潮如织。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032682" aria-describedby="caption-attachment-14032682" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032682-3_IMG_20230709_105404080_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032682" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032682-3_IMG_20230709_105404080_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032682" class="wp-caption-text">天上挂的，地上走的，各得其所。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032683" aria-describedby="caption-attachment-14032683" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032683-4IMG_20230709_145153381_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032683" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032683-4IMG_20230709_145153381_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032683" class="wp-caption-text">与蝴蝶仙子一起振臂欢呼。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032684" aria-describedby="caption-attachment-14032684" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032684-5_IMG_20230708_154146502_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032684" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032684-5_IMG_20230708_154146502_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032684" class="wp-caption-text">双人杂技，五色缤纷。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032685" aria-describedby="caption-attachment-14032685" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032685-6_IMG_20230709_145609626_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032685" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032685-6_IMG_20230709_145609626_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032685" class="wp-caption-text">气球小丑，憨态可掬。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032686" aria-describedby="caption-attachment-14032686" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032686-7_IMG_20230709_170122810_HDR_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032686" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032686-7_IMG_20230709_170122810_HDR_modified-600x452.jpg" alt="" width="600" b="452" /></a><figcaption id="caption-attachment-14032686" class="wp-caption-text">牛仔女孩与粉色大熊猫的亲密接触。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032687" aria-describedby="caption-attachment-14032687" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032687-8_IMG_20230709_184734336_HDR_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032687" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032687-8_IMG_20230709_184734336_HDR_modified-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032687" class="wp-caption-text">七人行的雅虎时光。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032688" aria-describedby="caption-attachment-14032688" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032688-9_IMG_20230709_163144501_HDR_modified.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032688" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032688-9_IMG_20230709_163144501_HDR_modified-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032688" class="wp-caption-text">巨大的可乐瓶令人忍不住上手。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032689" aria-describedby="caption-attachment-14032689" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032689-10_IMG_20230709_172528661_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032689" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032689-10_IMG_20230709_172528661_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032689" class="wp-caption-text">农家小院的悠闲下午。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032690" aria-describedby="caption-attachment-14032690" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032690-11_IMG_20230709_173918401_HDR.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14032690" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032690-11_IMG_20230709_173918401_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032690" class="wp-caption-text">公园内的花架、座椅都是原木所制呢。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032681" aria-describedby="caption-attachment-14032681" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032681-2_IMG_20230709_110020293_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032681" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032681-2_IMG_20230709_110020293_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032681" class="wp-caption-text">牛仔公园地标下，人潮如织。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032682" aria-describedby="caption-attachment-14032682" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032682-3_IMG_20230709_105404080_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032682" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032682-3_IMG_20230709_105404080_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032682" class="wp-caption-text">天上挂的，地上走的，各得其所。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032683" aria-describedby="caption-attachment-14032683" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032683-4IMG_20230709_145153381_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032683" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032683-4IMG_20230709_145153381_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032683" class="wp-caption-text">与蝴蝶仙子一起振臂欢呼。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032684" aria-describedby="caption-attachment-14032684" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032684-5_IMG_20230708_154146502_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032684" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032684-5_IMG_20230708_154146502_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032684" class="wp-caption-text">双人杂技，五色缤纷。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032685" aria-describedby="caption-attachment-14032685" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032685-6_IMG_20230709_145609626_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032685" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032685-6_IMG_20230709_145609626_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032685" class="wp-caption-text">气球小丑，憨态可掬。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032686" aria-describedby="caption-attachment-14032686" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032686-7_IMG_20230709_170122810_HDR_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032686" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032686-7_IMG_20230709_170122810_HDR_modified-600x452.jpg" alt="" width="600" b="452"></a><figcaption id="caption-attachment-14032686" class="wp-caption-text">牛仔女孩与粉色大熊猫的亲密接触。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032687" aria-describedby="caption-attachment-14032687" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032687-8_IMG_20230709_184734336_HDR_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032687" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032687-8_IMG_20230709_184734336_HDR_modified-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032687" class="wp-caption-text">七人行的雅虎时光。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032688" aria-describedby="caption-attachment-14032688" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032688-9_IMG_20230709_163144501_HDR_modified.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032688" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032688-9_IMG_20230709_163144501_HDR_modified-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032688" class="wp-caption-text">巨大的可乐瓶令人忍不住上手。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032689" aria-describedby="caption-attachment-14032689" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032689-10_IMG_20230709_172528661_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032689" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032689-10_IMG_20230709_172528661_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032689" class="wp-caption-text">农家小院的悠闲下午。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032690" aria-describedby="caption-attachment-14032690" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032690-11_IMG_20230709_173918401_HDR.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14032690" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032690-11_IMG_20230709_173918401_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032690" class="wp-caption-text">公园内的花架、座椅都是原木所制呢。（林采枫/大纪元）</figcaption></figure>
 <p>责任编辑：齐守善</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/7/n11169990.md#1" target="_blank">共产暴政录：老挝华人共产前后的处境变化</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237654.md#1">“牛鸣地裂”一场大地震冥冥中竟安排了三年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526494.md#1">怎样当个惹人爱的人？教你一个秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531783.md#1">浮生行吟：想想“长跑”这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/3/n12449160.md#1">明代茶道别开生面妙在何处 后人津津乐此道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/6/n14525768.md#1">【品读宋词】花胜去年红 离恨中见旷达</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14533389.md#1">【直播】美参院听证：审议世界反兴奋剂机构</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533647.md#1">【马克时空】以掌握制空权 伊导弹反击不可持续</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14533382.md#1">【直播】布鲁斯主持国务院简报会（6/17）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531890.md#1">中共为何不敢让亏损的“僵尸企业”倒闭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531586.md#1">美双管齐下 专家：中共藉稀土威胁适得其反</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532291.md#1">中国的打工人吃“人用饲料” 引爆争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531361.md#1">不认识新晋演员辛云来 黄晓明获对方搭档救火</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531385.md#1">偕刘嘉玲看爱马仕秀 梁朝伟社恐状态引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531440.md#1">43岁大陆知名主持人金昀离世 好友曝死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532625.md#1">被传嫁豪门每年有2亿零用钱 黄圣依首曝真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532113.md#1">林依晨顺利产下第二胎 夫全程陪产迎接儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531633.md#1">专家：“我一天吃什么”影片暗藏5大危害</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532214.md#1">爱美人士看过来 用这一物可以让你更年轻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532974.md#1">研究：食用富含类黄酮食物有助于延年益寿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14529262.md#1">选择植物蛋白还是动物蛋白？取决于年龄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/13/n14530781.md#1">被忽视的骨质疏松 通过饮食守护你的骨健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/12/n14032679.htm">2023卡尔加里牛仔节：浮光掠影</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/12/n14032679.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
